fix: fix width of post when content too long

--- a/static/styles/post.css
+++ b/static/styles/post.css
@@ -75,6 +75,9 @@
 	height: fit-content;
 	justify-content: left;
 	text-align: center;
+	max-width: 45rem;
+	width: 45rem;
+	min-width: 45rem;
 }
 
 .post-user-info {
@@ -119,7 +122,7 @@
 
 .post-content {
 	margin-bottom: 5px;
-	max-width: initial;
+	max-width: 85%;
 	word-wrap: break-word;
 }
 
@@ -179,7 +182,7 @@
 	border-radius: .75rem;
 	filter: drop-shadow(0px 0px 5px var(--bg-ternary));
 	max-height: 345px;
-	max-width: 90%;
+	max-width: 85%;
 	object-fit: contain;
 }
 
