--- a/static/styles/profile.css
+++ b/static/styles/profile.css
@@ -105,6 +105,7 @@
 	background-color: var(--bg-quinternary);
 	border-radius: 16px;
 	height: fit-content;
+	width: 50rem;
 }
 
 .post-container {
